@@ -21,8 +21,8 @@ dependencies {
     api(libs.jackson.annotations)
     api(libs.bundles.testbundle)
     api(libs.bundles.testcontainers)
-    implementation(libs.jackson.databind)
-    implementation(libs.sb.starter.json)
+    api(libs.jackson.databind)
+    api(libs.sb.starter.json)
     compileOnly(libs.sb.starter.web)
     compileOnly(libs.sb.starter.webflux)
     compileOnly(libs.sb.starter.data.jpa)
@@ -30,6 +30,7 @@ dependencies {
     compileOnly(libs.sb.starter.data.redis)
     compileOnly(libs.springdoc.openapi.webmvc)
     api(libs.bundles.tracing)
+    api(libs.bundles.observability)
     api(libs.bouncycastle.bcprov)
     api(libs.mapstruct)
     compileOnly(libs.lombok)
@@ -47,10 +48,28 @@ publishing {
     }
 }
 
-spotless { java { googleJavaFormat("1.27.0") } }
+tasks.withType<JavaCompile>().configureEach {
+    options.encoding = "UTF-8"
+    options.compilerArgs.removeAll { it == "--enable-preview" }
+}
+
+spotless {
+    java {
+        googleJavaFormat("1.27.0")
+        removeUnusedImports()
+    }
+}
 
 
 tasks.bootJar { enabled = false }
-tasks.jar { enabled = true }
+tasks.jar {
+    enabled = true
+    archiveClassifier.set("")
+}
 
-tasks.build { dependsOn("publishToMavenLocal") }
+tasks.build {
+    finalizedBy("publishToMavenLocal")
+}
+
+
+
